# pycook

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Readme.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yaml
pycook/: __init__.py  cli.py  cook.py  dsl.py  formatting.py  parser.py  recipe.py  types.py  utils.py
pycook/assets/: 01_header.tex
pycooklang/: __init__.py  parser.py
pycooklang/assets/: 01_header.tex  05_recipes.tex  99_footer.tex
tests/: conftest.py  test_dsl.py  test_parser.py  test_sections.py  test_tex_parser.py  test_utils.py
tests/examples/seed/: Neapolitan Pizza.cook  full.cook  full.md  full.tex  no_title.cook  only_sections.cook  only_sections.html  sections.cook  sections.html
