[project]
name = "pycook"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Saary", email = "opensource@paulsaary.de"},
]
requires-python = ">=3.10"

dependencies = [
    "loguru","pydantic", 
    "markdown==3.4.1",
    "markdown2latex @ git+https://github.com/openpaul/markdown2latex.git@fixes",  
    "GitPython==3.1.41",
]
[project.scripts]
pycook = "pycook.cli:main"



[project.optional-dependencies]

# Development dependencies (full + testing tools + docs)
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]