[project]
name = "pycooklang"
version = "2.0.0"
description = "A simple cooklang parser for python. It aims to be feature complete."
authors = [
    {name = "Paul Saary", email = "github@paulsaary.de"},
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "pdoc",
    "mktestdocs",
]


[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-ignore-import-errors"
testpaths = ["tests", "pycooklang"]
